--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -62,19 +62,23 @@
   margin-left: 3px;
 }
 .register-helloo {
-  margin-top: 30px;
+  margin-top: 25px;
   text-align: center;
   color: #2a2739;
+  margin-bottom: 30px;
+}
+.register-helloo h2 {
+  margin: 0px;
 }
 .register-helloo h4 {
-  margin-top: 5px;
+  margin: 0px;
 }
 .register-input_text {
   position: relative;
   margin-top: 20px;
 }
 .register-input {
-  height: 40px;
+  height: 35px;
   width: 94%;
   border: none;
   outline: 0;
