--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -1,6 +1,9 @@
 .feed {
-    flex: 0.4;
+
+    flex: 0.45;
     border-right: 1px solid var(--twitter-background);
+    border-left: 1px solid var(--twitter-background);
+    border-bottom: 1px solid var(--twitter-background);
     min-width: fit-content;
     overflow-y: scroll;
   }
@@ -15,18 +18,51 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
-  
+
   .feed__header {
     position: sticky;
+    border-top: 1px solid var(--twitter-background);
+    background-color: #fff;
+    top: 0px;
+    padding-bottom: 20px;
+    z-index: 999;
+  }
+  
+  .feed__searchBox {
+    /* position: sticky;
     top: 0;
     background-color: white;
     z-index: 100;
     border: 1px solid var(--twitter-background);
-    padding: 15px 20px;
+    padding: 15px 20px; */
+
+    display: flex;
+    align-items: center;
+    background-color: var(--twitter-background);
+    border: 1px solid var(--twitter-background);
+    padding: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 20px;
+    margin-top: 10px;
+    /* padding-top: 10px; */
+
+    
   }
   
   .feed__header > h2 {
     font-size: 20px;
     font-weight: 800;
+  }
+
+  .feed__searchBox > input {
+    border: none;
+    outline: none;
+    width: 400px;
+    background-color: var(--twitter-background);
+  }
+
+  .widgets__searchIcon {
+    color: gray;
   }
   
